# py-nougat

./: LICENSE  README.md  __init__.py  nougat-readme.md  nougat.py  nougat.pyi  nougat_python3.py  pyproject.toml  test_nougat.py
.github/workflows/: test-and-build.yml
src/: __init__.py
tests/: test_nougat.py
