[tool.poetry]
name = "pynougat"
version = "0.0.2"
description = "A lightweight type-safe Python utility for safely accessing deeply nested dictionary values"
authors = ["Juan Sanchez <jsanchez@sphire.co>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"


[project]
name = "pynougat"
version = "0.0.2"
description = "A lightweight type-safe Python utility for safely accessing deeply nested dictionary values"
authors = [
    {name="Juan Sanchez", email="jsanchez@sphire.co"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["nougat", "pynougat", "deep", "nested", "dictionary", "access", "path", "traversal", "type-safe"]
license-expression = "MIT"


#[tool.setuptools]
#license-files = ["LICENSE"]


[project.urls]
Homepage = "https://github.com/sphireinc/pynougat"
Issues = "https://github.com/sphireinc/pynougat/issues"


[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


#[build-system]
#requires = ["hatchling >= 1.26"]
#build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/pynougat.py", "src/__init__.py"]
license-files = ["LICENSE"]

